--- a/html/pag1.html
+++ b/html/pag1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style-pag1.css">
+    <link rel="stylesheet" href="/css/style-pag1.css">
 </head>
 
 <body>
