--- a/html/pag2.html
+++ b/html/pag2.html
@@ -5,20 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style-pag2.css">
+    <link rel="stylesheet" href="/css/style-pag2.css">
 </head>
 
 <body>
-    <main class="main">
-        <div><img src="/imagens/tela2.svg" alt="personagens"></div>
-        <div>
-            <h1>Necessities of working in financial markets</h1>
-            <p>This research in to find the reasons for the failure of people in financial markets. The results of this survey will be emailed to you along with the analysis of our experienced exeperts</p>
-
-            <button class="button"><a href="pag1.html">Back to home</a></button>
-            <button class="button"><a href="pag3.html">Fill out the form</a></button>
+    <main>
+        <div class="content-container">
+            <div class="img2">
+                <img src="/imagens/tela2.svg" alt="personagens">
+            </div>
+            <div class="container2">
+                <h1>Necessities of working in financial markets</h1>
+                <p>This research aims to find the reasons for the failure of people in financial markets. The results of this survey will be emailed to you along with the analysis of our experienced experts.</p>
+                <div class="button2">
+                    <button><a href="pag1.html">Back to home</a></button>
+                    <button><a href="pag3.html">Fill out the form</a></button>
+                </div>
+            </div>
         </div>
-
     </main>
 </body>
 
